
2018-10-01  Simon Sobisch <simonsobisch@gnu.org>

	* makedist.bat: copy compiled msgid catalogs
	* makedist.bat: copy libint.dll if existing
	* set_env_vs_dist.bat, set_env_vs_dist_x64.bat, defaults.h.in:
	  set reasonable standard localedir

2018-08-19  Edward Hart <edward.dan.hart@gmail.com>

	* config.h.in: added WITH_XML2 and associated library pragma's.
	* README.txt: updated with my experience trying to make check with
	  MinGW.

2017-12-06  Simon Sobisch <simonsobisch@gnu.org>

	* config.h.in: added COB_DEBUG_LOG (as undefined)
	* vs2005, vs2008, vs2010, vs2012, vs2013, vs2015, vs2017: added
	  libcob/reportio.c

2017-10-12  Simon Sobisch <simonsobisch@gnu.org>

	* makebisonflex.bat: check ERRORLEVEL instead of using || and &&
	  as this works on all systems; print separator between tools

2017-09-05  Simon Sobisch <simonsobisch@gnu.org>

	* defaults.h.in: changed install folder for DIST builds to
	  PACKAGE_NAME + _ + PACKAGE_VERSION (GnuCOBOL_2.3_dev)
	* vs2008: added size check for DEBUG builds
	* README.txt: updated
	* set_env_vs.bat, set_env_vs_x64.bat, set_env_vs_dist.bat,
	  set_env_vs_dist_x64.bat: only try to setup a matching cl.exe if it
	  isn't present already
	* makedist.bat: fixed version lookup when directory contains spaces;
	  use PACKAGE_NAME, PACKAGE_VERSION and suffix "vs_bin" for resulting
	  7zip file; fallback to directory, when 7zip is not available

2017-09-04  Edward Hart <edward.dan.hart@gmail.com>

	* set_env_vs_dist_x64.bat: replaced reference to "dist/bin" with
	  "dist/bin_x64".
	* makedist.bat: the batch now fails if cobc has a negative errorlevel
	  (e.g. if a DLL is missing).
	* makedist.bat: replaced setting of errorlevel with cb_errorlevel;
	  errorlevel is a built-in variable which can be hidden by an
	  environment variable of the same name.

2017-09-03  Edward Hart <edward.dan.hart@gmail.com>

	* set_env_vs_x64.bat, set_env_vs_dist_x64.bat: fix VCINSTALLDIR being
	  expanded too soon.